prometheus_templates/prometheus_stack/ingress_demo/demo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2023-02-20T14:23:27Z"
  generation: 3
  name: demo-localhost
  namespace: default
  resourceVersion: "6546100"
  uid: 1101117e-10f2-4069-a8d3-426161639644
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: demo
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - secretName: test-tls
status:
  loadBalancer:
    ingress:
    - ip: 192.168.20.159
